Nesse novo commit, foi alterado os nomes de alguns arquivos que não tinha utilidade

--- a/views/CuidadososListingPage.ejs
+++ b/views/CuidadososListingPage.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%-include('partials/head.ejs') %>
+<%-include('Partials/Head.ejs') %>
 
 <body>
 
   <!-- ======= Header ======= -->
-  <%-include('partials/header.ejs')  %>
+  <%-include('Partials/Header.ejs')  %>
  <!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
@@ -172,7 +172,7 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <%-include('partials/footer.ejs')  %>
+  <%-include('Partials/Footer.ejs')  %>
  <!-- End Footer -->
 
   <div id="preloader"></div>
