--- a/views/HomePage.ejs
+++ b/views/HomePage.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%-include('partials/head.ejs') %>
+<%-include('Partials/Head.ejs') %>
 
 <body>
 
   <!-- ======= Header ======= -->
-  <%-include('partials/header.ejs')  %>
+  <%-include('Partials/Header.ejs')  %>
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
@@ -525,7 +525,7 @@ Profissionais ao alcance de um clique, descubra o especialista que melhor atende
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <%-include('partials/footer.ejs')  %>
+  <%-include('Partials/Footer.ejs')  %>
   <!-- End Footer -->
 
   <div id="preloader"></div>
