--- a/views/LoginPage.ejs
+++ b/views/LoginPage.ejs
@@ -35,6 +35,7 @@
                       <div class="section-title">
                         <h2>Login</h2>
 
+                        
                       </div>
                       <div class="form-group ">
                         <label for="name">Email</label>
@@ -52,7 +53,7 @@
                       <div class="text-center"><button type="submit">Login</button></div><br>
 
                   </form>
-
+                  <h4 class="text-danger  "><%=Status %></h4>
                 </div>
               </div>
 
