Ajustes de Funcionalidades

--- a/views/CuidadososListingPage.ejs
+++ b/views/CuidadososListingPage.ejs
@@ -20,7 +20,7 @@
         <div class="section-title">
           <input type="hidden"><br><br><br>
           <h2>Cuidadosos</h2>
-                    <p>Conheça nosso catálogo de Cuidadosos</p>
+                    <p>Conheça nosso catálogo de Profissionais</p>
         </div>
 
 
@@ -31,7 +31,7 @@
               <h4>Filtros <button class="tres"> <i onclick="divfiltros()" class="fas fa-ellipsis-v"></i></button></h4><br>
             </div>
             <div style="text-align: end" class="col-lg-5 ">
-              <input class="form-control " type="text" id="searchInput" onkeyup="search()" placeholder=" 🔎  Pesquisar por nome...">
+              <input class="form-control rounded-2  " type="text" id="searchInput" onkeyup="search()" placeholder="  Pesquisar por nome...">
             </div>
 
           <div class="row">
