--- a/views/HomePage.ejs
+++ b/views/HomePage.ejs
@@ -480,8 +480,7 @@ Profissionais ao alcance de um clique, descubra o especialista que melhor atende
                 <h4>Contato:</h4>
                 <p>+1 5589 55488 55s</p>
               </div>
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d0.012221400759014468!2d-43.84415725709432!3d-19.985308490891846!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3749.534924773254!2d-43.84671962538288!3d-19.986051740055185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa69f3fd0a7ba8b%3A0xb157579645b895f!2sSENAI%20Nova%20Lima%20CFP%20Afonso%20Greco!5e0!3m2!1spt-BR!2sbr!4v1712611494783!5m2!1spt-BR!2sbr" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div> 
