Estou criando o chat

--- a/views/LoginPage.ejs
+++ b/views/LoginPage.ejs
@@ -47,10 +47,10 @@
                         <input type="password" class="form-control" placeholder="Digite sua senha" name="senha"
                           id="email" required>
                       </div>
-
-
-
                       <div class="text-center"><button type="submit">Login</button></div><br>
+
+                      <a href=""><p>Esqueci minha senha</p></a>
+
 
                   </form>
                   <h4 class="text-danger  "><%=Status %></h4>
