--- a/views/partials/admin.ejs
+++ b/views/partials/admin.ejs
@@ -59,7 +59,7 @@
 
                     <div style="display: none;" class="container divft">
 
-                      <form action="/upload" method="POST" enctype="multipart/form-data">
+                      <form action="/UploadFTPerfil" method="POST" enctype="multipart/form-data">
                         <br>
                         <h6>Selecione sua foto</h6>
                         <input style="width: 98%;" class="btn  btn-outline-secondary   " type="file" name="imagem"
