--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,11 @@
           <li><a class="nav-link scrollto" href="/Historico">Minhas Solicitações</a></li>
           <li class="dropdown"><a href="#"><span>Configurações</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
+              
+
               <li><a href="/Perfil/<%=userId%>">Meu Perfil</a></li>
+
+
               <li class="dropdown"><a href="#"><span>Minha Agenda</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="/Historico">Solicitações</a></li>
@@ -34,7 +38,18 @@
             </ul>
           </li>
           
+          <% if(TipoConta == 'Cliente') {%>
+
+            <li><a class="getstarted scrollto" href="/contrate">Contrate</a></li>
+
+            <% }else{ %>
+
           <li><a class="getstarted scrollto" href="/Perfil/<%=userId%>">Meu Perfil</a></li>
+
+
+            <% } %>
+
+
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
